# fast-web-02

./: .env  .gitignore  README.md  aerich.ini  init_db.py  main.py  pyproject.toml
app/: __init__.py  init_app.py
app/api/: __init__.py  login.py  system.py  user.py
app/common/: __init__.py  responses.py
app/core/: __init__.py  config.py  logger.py
app/exceptions/: __init__.py  exception.py
app/middleware/: __init__.py  cors_middleware.py  logging_middleware.py
app/models/: __init__.py  system.py  user.py
app/schemas/: __init__.py  system.py  user.py
app/services/: __init__.py  auth_service.py  cache_service.py  system_service.py  token_cache_service.py  user_service.py
app/utils/: __init__.py  encrypt.py  minio_client.py  redis_client.py
migrations/models/: 0_20251104180350_init.py  1_20251107132224_add avatar_url.py  2_20251117134858_add system config.py  3_20251117135015_add system config.py  4_20251117152159_change system order.py  5_20251119134533_fix user avatar_url to char field.py
test/: gener.py  person_sql_union.sql  test01.py
